# job-search-planner

./: .gitignore  CLAUDE.md  README.md  run.sh
backend/: .env.example  .gitignore  app.py  config.py  database.py  job_search_service.py  models.py  pyproject.toml
frontend/: index.html  script.js  style.css
